--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -717,7 +717,7 @@
                                     <thead>
                                         <tr>
                                             <th
-                                            <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>; border: 1px solid <%= data.Color %>; padding: 0px; margin:0px "> You've Saved <%=data.SavedDiscount%> <% if (data.shopdetails.CompanyID === 19 ){%> AED <%}%> <% if (data.shopdetails.CompanyID !== 19 ){%> Rs <%}%> on this Invoice!
+                                            <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>; border: 1px solid <%= data.Color %>; padding: 0px; margin:0px "> You've Saved <%=data.SavedDiscount%> <% if (data.companysetting.CompanyID == 19 ){%> AED <%}%> <% if (data.shopdetails.CompanyID != 19 ){%> Rs <%}%> on this Invoice!
                                         </th>
                                         </tr>
                                     </thead>
