--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1376,8 +1376,8 @@
                         mat-raised-button color="primary">
                         Credit Note
                     </button>
-                    <button *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="CreditPDF == ''" (click)="sendWhatsapp('credit')" class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp"></i></button>
-                    <button class="email"><i class="fa-solid fa-envelope"></i></button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="CreditPDF == ''" (click)="sendWhatsapp('credit')" class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp"></i></button>
+                    <button type="button" class="email"><i class="fa-solid fa-envelope"></i></button>
                 </div>
             </div>
         </form>
