--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.css
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.css
@@ -113,7 +113,7 @@ input::-webkit-inner-spin-button {
   .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
   }
   
   table {
@@ -141,3 +141,8 @@ input::-webkit-inner-spin-button {
   .mat-elevation-z8 {
     box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 0%), 0px 8px 10px 1px rgb(0 0 0 / 0%), 0px 3px 14px 2px rgb(0 0 0 / 0%) !important; 
 }
+
+tr.mat-row, tr.mat-footer-row {
+  height: 0px !important;
+}
+
