--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -921,7 +921,6 @@
                 </div>
                 <div class="col-1 pt-3">
                     <button mat-raised-button color="primary" (click)="generateGrid()">Show</button>
-
                 </div>
             </div>
         </div>
@@ -930,8 +929,6 @@
     <div class="modal-body p-0">
         <div class="row">
             <div class="col-12 mx-auto">
-
-
                 <div class="container p-0" *ngIf="dataSource.length">
                     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
                         style="overflow: auto; height: 480px; width: 100%;">
@@ -939,25 +936,25 @@
                         <ng-container matColumnDef="cyl">
                             <th mat-header-cell *matHeaderCellDef
                                 style="font-size: 18px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;">
-                                SPH <br> CYL </th>
+                                CYL  <br> SPH  </th>
                             <td mat-cell *matCellDef="let element"
                                 style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
-                                class="hovertblrow-col"> {{element.cyl}} </td>
+                                class="hovertblrow-col"> {{element.sph}} </td>
                         </ng-container>
 
                         <!-- Dynamic Columns for SPH -->
-                        <ng-container *ngFor="let sph of sphValues; let i = index" [matColumnDef]="sph">
+                        <ng-container *ngFor="let cyl of cylValues; let i = index" [matColumnDef]="cyl">
                             <th mat-header-cell *matHeaderCellDef
                                 style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
-                                {{sph}} </th>
+                                {{cyl}} </th>
                             <td mat-cell *matCellDef="let element" class="hovertblrow-col"
                                 [ngClass]="{'highlight-column': clickedColumnIndex === i}"
                                 style="font-size: 16px;color: rgb(61, 61, 61); border: 1px solid">
-                                <input class="inputBoxTD" type="number" [(ngModel)]="element[sph]" min="0"
-                                    (focus)="onInputFocus(i, element, sph)" (mouseleave)="onInputClick(null)"
-                                    (blur)="onInputBlur(element, sph)"
-                                    (change)="qtyAdd(sph, element.cyl, element[sph], lens)"
-                                    [ngStyle]="{ 'color': element[sph] == 0 ? '#242424' : 'red', 'font-weight': element[sph] == 0 ? 'normal' : '900' }"
+                                <input class="inputBoxTD" type="number" [(ngModel)]="element[cyl]" min="0"
+                                    (focus)="onInputFocus(i, element, cyl)" (mouseleave)="onInputClick(null)"
+                                    (blur)="onInputBlur(element, cyl)"
+                                    (change)="qtyAdd(element.sph, cyl,  element[cyl], lens)"
+                                    [ngStyle]="{ 'color': element[cyl] == 0 ? '#242424' : 'red', 'font-weight': element[cyl] == 0 ? 'normal' : '900' }"
                                     style="border: none !important;background: none;" />
                             </td>
                         </ng-container>
@@ -970,11 +967,7 @@
                         </tr>
                     </table>
                 </div>
-
-
             </div>
-
-
 
             <!-- product-quantity-grid.component.html -->
             <div *ngIf="axisAddEyeShow == true" class="row ms-3">
@@ -987,10 +980,8 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
-
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Addtion</mat-label>
                         <mat-select name="addtion" [(ngModel)]="lens.addtion" #addtioncontrol>
@@ -1011,7 +1002,6 @@
                     </mat-form-field>
                 </div>
             </div>
-
             <div class="row mt-2 ms-3">
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                     <mat-form-field class="example-full-width mb-0">
@@ -1100,12 +1090,41 @@
             <div class="row">
                 <div class="col-2">
                     <h2 class="modal-title header pt-2" id="exampleModalLabel">Lens Grid</h2>
-
                 </div>
                 <div class=" col-2 pt-3  mb-0">
                     <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Index</mat-label>
+                        <mat-select name="SVType" [(ngModel)]="SVType"  #SVTypecontrol >
+                            <mat-option value="1.56">1.56 Index</mat-option>
+                            <mat-option value="1.61">1.61 Index</mat-option>
+                            <mat-option value="1.499">1.499 Index</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="SVType == '1.56'" class=" col-2 pt-3  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
                         <mat-label>Select Base Type</mat-label>
-                        <mat-select name="Base" [(ngModel)]="Base"  #eyecontrol (selectionChange)="baseChange(this.Base)">
+                        <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.56')">
+                            <mat-option value="12">Base 12</mat-option>
+                            <mat-option value="10">Base 10</mat-option>
+                            <mat-option value="8">Base 8</mat-option>
+                            <mat-option value="7">Base 7</mat-option>
+                            <mat-option value="6">Base 6</mat-option>
+                            <mat-option value="5">Base 5</mat-option>
+                            <mat-option value="4">Base 4</mat-option>
+                            <mat-option value="3">Base 3</mat-option>
+                            <mat-option value="2">Base 2</mat-option>
+                            <mat-option value="1">Base 1</mat-option>
+                            <mat-option value="0.5">Base 0.5</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="SVType == '1.61'" class=" col-2 pt-3  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Select Base Type</mat-label>
+                        <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.61')">
+                            <mat-option value="12">Base 12</mat-option>
+                            <mat-option value="11">Base 11</mat-option>
                             <mat-option value="10">Base 10</mat-option>
                             <mat-option value="9">Base 9</mat-option>
                             <mat-option value="8">Base 8</mat-option>
@@ -1117,6 +1136,24 @@
                             <mat-option value="2">Base 2</mat-option>
                             <mat-option value="1">Base 1</mat-option>
                             <mat-option value="0.5">Base 0.5</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="SVType == '1.499'" class=" col-2 pt-3  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Select Base Type</mat-label>
+                        <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.499')">
+                            <mat-option value="12">Base 12</mat-option>
+                            <mat-option value="11">Base 11</mat-option>
+                            <mat-option value="10">Base 10</mat-option>
+                            <mat-option value="9">Base 9</mat-option>
+                            <mat-option value="8">Base 8</mat-option>
+                            <mat-option value="7">Base 7</mat-option>
+                            <mat-option value="6">Base 6</mat-option>
+                            <mat-option value="5">Base 5</mat-option>
+                            <mat-option value="4">Base 4</mat-option>
+                            <mat-option value="2">Base 2</mat-option>
+                            <mat-option value="0">Base 0</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
@@ -1174,8 +1211,6 @@
     <div class="modal-body p-0">
         <div class="row">
             <div class="col-12 mx-auto">
-
-
                 <div class="container p-0" *ngIf="dataSourceL.length">
                     <table mat-table [dataSource]="dataSourceL" class="mat-elevation-z8"
                         style="overflow: auto; height: 480px; width: 100%;">
@@ -1188,7 +1223,6 @@
                                 style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
                                 class="hovertblrow-col"> {{element.sph}} </td>
                         </ng-container>
-
                         <!-- Dynamic Columns for SPH -->
                         <ng-container *ngFor="let cyl of cylValuesL; let i = index" [matColumnDef]="cyl">
                             <th mat-header-cell *matHeaderCellDef
@@ -1207,7 +1241,6 @@
                               </ng-container>
                             </td>
                           </ng-container>
-
                         <tr mat-header-row *matHeaderRowDef="displayedColumnsL" style="height: -1px !important;"
                             class="hovertblrow-col"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumnsL;"
@@ -1216,12 +1249,7 @@
                         </tr>
                     </table>
                 </div>
-
-
             </div>
-
-
-
             <!-- product-quantity-grid.component.html -->
             <div *ngIf="axisAddEyeShow == true" class="row ms-3">
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
@@ -1233,10 +1261,8 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
-
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Addtion</mat-label>
                         <mat-select name="addtion" [(ngModel)]="lensL.addtion" #addtioncontrol>
@@ -1257,7 +1283,6 @@
                     </mat-form-field>
                 </div>
             </div>
-
             <div class="row mt-2 ms-3">
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                     <mat-form-field class="example-full-width mb-0">
