--- a/web1/src/app/report/purchase-report/purchase-report.component.css
+++ b/web1/src/app/report/purchase-report/purchase-report.component.css
@@ -61,3 +61,43 @@
     display: grid;
     /* Show the box when the button-container is hovered */
   }
+
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  
+  }
+  
+  table {
+    width: 100%;
+    margin-bottom: 0px;
+    text-align: center !important;
+
+  }
+  
+  .inputBoxTD[type="number"] {
+    width: 100%;
+    text-align: center;
+  }
+
+
+  
+  .highlight-column {
+    background-color: #6186ff !important;
+  }
+  
+  .highlight-row td {
+    background-color: #6186ff !important;
+  }
+  
+
+  .mat-elevation-z8 {
+    box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 0%), 0px 8px 10px 1px rgb(0 0 0 / 0%), 0px 3px 14px 2px rgb(0 0 0 / 0%) !important; 
+}
+
+tr.mat-row, tr.mat-footer-row {
+  height: 0px !important;
+}
+
