--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -412,10 +412,12 @@
                         <button type="button" class="me-2" mat-raised-button color="warn" (click)="purchaseDetailsFromReset()">
                           Reset
                         </button>
-                        <button type="button" mat-raised-button color="primary" (click)="getPurchaseDetailsExport()">
+                        <button type="button" class="me-2 " mat-raised-button color="primary" (click)="getPurchaseDetailsExport()">
                           Quick Download
                         </button>
-
+                     
+                          <button type="button" *ngIf="this.selectedProduct == 'LENS'"  (click)="openModalS(content00)" mat-raised-button color="primary" >Lens Grid</button>
+                        
                       </div>
                     </div>
                   </form>
@@ -1386,4 +1388,251 @@
       </table>
     </div>
   </div>
+</ng-template>
+
+<ng-template #content00 role="document" let-modal>
+  <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <h2 class="modal-title header pt-2" id="exampleModalLabel">Lens Grid
+                <button class="ms-3" mat-raised-button color="primary" type="button"
+                (click)="exportAsXLSXlens()"> Excel </button> </h2>
+            </div>
+            <div class="col-4 pt-2">
+                <button mat-raised-button
+                    [ngStyle]="{'background-color': isActive1 ? '#3f51b5' : '#dddddd','color':isActive1 ? '#fff' : '#000'}"
+                    (click)="plusToplus('+sph+cyl'); toggleActive(1)">
+                    +/+
+                </button>
+
+                <button mat-raised-button
+                    [ngStyle]="{'background-color': isActive2 ? '#3f51b5' : '#dddddd','color':isActive2 ? '#fff' : '#000'}"
+                    (click)="plusToplus('-sph-cyl'); toggleActive(2)" class="ms-2 me-2">
+                    -/-
+                </button>
+
+                <button mat-raised-button
+                    [ngStyle]="{'background-color': isActive3 ? '#3f51b5' : '#dddddd','color':isActive3 ? '#fff' : '#000'}"
+                    (click)="plusToplus('+sph-cyl'); toggleActive(3)">
+                    +/-
+                </button>
+            </div>
+              <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label>Axis</mat-label>
+                      <mat-select name="axis" [(ngModel)]="axisFilter" #axiscontrol (selectionChange)="Axis1212()">
+                          <mat-option [value]=0 >0</mat-option>
+                          <mat-option [value]="a.Name" *ngFor="let a of axisList">
+                              {{a.Name}}
+                          </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+
+              </div>
+            <!-- <div class="col-1 pt-1">
+                <label>SPH-Min</label>
+                <input type="number" placeholder="SPH-Min" style="width: 70px;" [(ngModel)]="sphMin">
+            </div>
+            <div class="col-1 pt-1">
+                <label>SPH-Max</label>
+                <input type="number" placeholder="SPH-Max" style="width: 70px;" [(ngModel)]="sphMax">
+            </div>
+            <div class="col-1 pt-1">
+                <label for="sph-step">SPH Step</label>
+                <input id="sph-step" type="number" style="width: 70px;" [(ngModel)]="sphStep">
+            </div>
+            <div class="col-1 pt-1">
+                <label for="cyl-step">CYL-Min</label>
+                <input type="number" placeholder="CLY-Min" style="width: 70px;" [(ngModel)]="cylMin">
+            </div>
+            <div class="col-1 pt-1">
+                <label for="cyl-step">CYL-Max</label>
+                <input type="number" placeholder="CLY-Max" style="width: 70px;" [(ngModel)]="cylMax">
+            </div>
+            <div class="col-1 pt-1">
+                <label for="cyl-step">CYL Step</label>
+                <input id="cyl-step" type="number" style="width: 70px;" [(ngModel)]="cylStep">
+            </div>
+            <div class="col-1 pt-3">
+                <button mat-raised-button color="primary" (click)="generateGrid()">Show</button>
+
+            </div> -->
+        </div>
+    </div>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+</div>
+<div class="modal-body p-0">
+    <div class="row">
+        <div class="col-12 mx-auto" style="overflow: scroll;height: 550px;">
+            <div class="container p-0" *ngIf="dataSource.length">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+                    style="overflow: auto; height: 480px; width: 100%;" id="lensExcel">
+                    <!-- CYL Column -->
+                    <ng-container matColumnDef="cyl">
+                        <th mat-header-cell *matHeaderCellDef
+                            style="font-size: 18px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;">
+                             CYL <br> SPH  </th>
+                        <td mat-cell *matCellDef="let element"
+                            style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
+                            class="hovertblrow-col"> {{element.sph}} <span *ngIf="this.axisFilter != 0"> / {{this.axisFilter}}</span> </td>
+                    </ng-container>
+                    <!-- Dynamic Columns for SPH -->
+                    <ng-container *ngFor="let cyl of cylValues; let i = index" [matColumnDef]="cyl">
+                        <th mat-header-cell *matHeaderCellDef
+                            style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
+                            {{cyl}} <span *ngIf="this.axisFilter != 0"> / {{this.axisFilter}}</span></th>
+                        <td mat-cell *matCellDef="let element" class="hovertblrow-col"
+                            [ngClass]="{'highlight-column': clickedColumnIndex === i}"
+                            style="font-size: 16px;color: rgb(61, 61, 61); border: 1px solid" [ngStyle]="{ 'color': element[cyl] == 0 ? '#242424' : 'red', 'font-weight': element[cyl] == 0 ? 'normal' : '900' }">
+                            {{element[cyl]}} 
+                            <!-- <input class="inputBoxTD" type="number" [(ngModel)]="element[cyl]" min="0"
+                                (focus)="onInputFocus(i, element, cyl)" (mouseleave)="onInputClick(null)"
+                                (blur)="onInputBlur(element, cyl)" />--> 
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height: 0px;"
+                        class="hovertblrow-col"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                        [ngClass]="{'highlight-row': isHoveredRow(row)}" (click)="hoveredRow = row"
+                        (mouseleave)="hoveredRow = null" style="height: 0px;" class="hovertblrow-col">
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- product-quantity-grid.component.html -->
+        <!-- <div *ngIf="axisAddEyeShow == true" class="row ms-3">
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Axis</mat-label>
+                    <mat-select name="axis" [(ngModel)]="lens.axis" #axiscontrol>
+                        <mat-option [value]="a.Name" *ngFor="let a of axisList">
+                            {{a.Name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Addtion</mat-label>
+                    <mat-select name="addtion" [(ngModel)]="lens.addtion" #addtioncontrol>
+                        <mat-option [value]="ad.Name" *ngFor="let ad of additionList">
+                            {{ad.Name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Eye</mat-label>
+                    <mat-select name="eye" [(ngModel)]="lens.eye" #eyecontrol>
+                        <mat-option value="R">R</mat-option>
+                        <mat-option value="L">L</mat-option>
+                        <mat-option value="RL">RL</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        </div> -->
+        <div class="row mt-2 ms-3">
+            <!-- <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Purchase Price</mat-label>
+                    <input matInput name="purchasePrice" [(ngModel)]="lens.purchasePrice" #purchasePricecontrol
+                        [autocomplete]="false">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div> -->
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Qty++</mat-label>
+                    <input matInput name="quantity" value="{{this.pp}}" #quantitycontrol [autocomplete]="false"
+                        disabled style="color: red !important; font-weight:700;">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Qty--</mat-label>
+                    <input matInput name="quantity" value="{{this.mm}}" #quantitycontrol [autocomplete]="false"
+                        disabled style="color: red !important; font-weight:700;">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Qty+-</mat-label>
+                    <input matInput name="quantity" value="{{this.pm}}" #quantitycontrol [autocomplete]="false"
+                        disabled style="color: red !important; font-weight:700;">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Total Qty</mat-label>
+                    <input matInput name="quantity" value="{{this.lenQty}}" #lenQtycontrol [autocomplete]="false"
+                        disabled style="color: red !important; font-weight:700;">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <!-- <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Gst%</mat-label>
+                    <input matInput name="GSTPercent" [(ngModel)]="lens.GSTPercent" #GSTPercentcontrol
+                        [autocomplete]="false">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <mat-form-field *ngIf="lens.GSTPercent !== 0" class="example-full-width mb-0">
+                    <mat-label>TAX Type</mat-label>
+                    <mat-select name="GSTtype" [(ngModel)]="lens.GSTtype" #GSTTypeacontrol required>
+                        <span>
+                            <mat-option [value]="g.Name" *ngFor="let g of gstList">
+                                {{g.Name}}
+                            </mat-option>
+                        </span>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0" *ngIf="shop[0].RetailBill === 'true'">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Retail Price</mat-label>
+                    <input matInput name="retailPrice" [(ngModel)]="lens.retailPrice" #retailPricecontrol
+                        [autocomplete]="false">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0"
+                *ngIf="shop[0].WholesaleBill === 'true'">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Wholesale Price</mat-label>
+                    <input matInput name="retailPrice" [(ngModel)]="lens.wholesalePrice" #retailPricecontrol
+                        [autocomplete]="false">
+                    <mat-error>
+                        Total Amount is required
+                    </mat-error>
+                </mat-form-field>
+            </div> -->
+            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <!-- <button mat-raised-button color="primary" [disabled]="totalQty == 0"
+                    (click)="purchase('save')">Purchase</button> -->
+            </div>
+        </div>
+    </div>
+</div>
+  
 </ng-template>
