--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -120,10 +120,10 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="company.ID != 241 && company.ID != 300 && company.ID != 1" class="col-lg-1 col-md-6 col-6 ms-2 pt-1 p-0">
+                                <div *ngIf="company.ID != 241 && company.ID != 300 " class="col-lg-1 col-md-6 col-6 ms-2 pt-1 p-0">
                                     <button  [disabled]="!selectedProduct" (click)="openModalS(content1)" mat-raised-button color="primary">Lens Grid</button>
                                 </div>
-                                <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 1" class="col-lg-1 col-md-6 col-6 ms-2 pt-1 p-0">
+                                <div *ngIf="company.ID == 241 || company.ID == 300 " class="col-lg-1 col-md-6 col-6 ms-2 pt-1 p-0">
                                     <button [disabled]="!selectedProduct" (click)="openModalL(content2)"  mat-raised-button color="primary">Base Grid</button>
                                 </div>
                                 <div class="col-lg-2 col-md-6 col-6 ms-auto pt-2 p-0" *ngIf="category !== 'Charges'">
