--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -230,7 +230,10 @@
                         <button type="button" class="me-2" mat-raised-button color="primary" (click)="getInventoryExport()">
                           Quick Download
                         </button>
-                        <button type="button" *ngIf="this.selectedProduct == 'LENS'"  (click)="openModalS(content0000)" mat-raised-button color="primary" >Lens Grid</button>
+                       
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0 " *ngIf="this.selectedProduct == 'LENS'">
+                        <button *ngIf="company.ID == 241 || company.ID == 300 " type="button"   (click)="openModalS(content0000)" mat-raised-button color="primary" >Base Grid</button>
                       </div>
                     </div>
                   </form>
