--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -1098,6 +1098,7 @@
                             <mat-option value="1.56">1.56 Index</mat-option>
                             <mat-option value="1.61">1.61 Index</mat-option>
                             <mat-option value="1.499">1.499 Index</mat-option>
+                            <mat-option value="1.56 Progressive">1.56 Progressive</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
@@ -1154,6 +1155,17 @@
                             <mat-option value="4">Base 4</mat-option>
                             <mat-option value="2">Base 2</mat-option>
                             <mat-option value="0">Base 0</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="SVType == '1.56 Progressive'" class=" col-2 pt-3  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Select Base Type</mat-label>
+                        <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.56 Progressive')">
+                          
+                            <mat-option value="5">Base 5</mat-option>
+                            <mat-option value="3">Base 3</mat-option>
+                            <mat-option value="1">Base 1</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
