--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -1426,6 +1426,9 @@
                       <mat-option value="1.56">1.56 Index</mat-option>
                       <mat-option value="1.61">1.61 Index</mat-option>
                       <mat-option value="1.499">1.499 Index</mat-option>
+                      <mat-option value="1.56 Progressive">1.56 Progressive (-)</mat-option>
+                      <mat-option value="1.56 ProPlus">1.56 Progressive(+)</mat-option>
+
                   </mat-select>
               </mat-form-field>
 
@@ -1486,6 +1489,26 @@
                   </mat-select>
               </mat-form-field>
           </div>
+          <div *ngIf="SVType == '1.56 Progressive'" class=" col-2  mb-0">
+            <mat-form-field class="example-full-width mb-0">
+                <mat-label>Select Base Type</mat-label>
+                <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.56 Progressive')">
+                    <!-- <mat-option value="5">Base 5</mat-option> -->
+                    <mat-option value="3">Base 3</mat-option>
+                    <mat-option value="1">Base 1</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div *ngIf="SVType == '1.56 ProPlus'" class=" col-2  mb-0">
+          <mat-form-field class="example-full-width mb-0">
+              <mat-label>Select Base Type</mat-label>
+              <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.56 ProPlus')"> 
+                  <mat-option value="5">Base 5</mat-option>
+                  <mat-option value="3">Base 3</mat-option>
+                  <mat-option value="1">Base 1</mat-option>
+              </mat-select>
+          </mat-form-field>
+      </div>
           <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4  mb-0">
             <mat-form-field class="example-full-width mb-0">
                 <mat-label>Axis</mat-label>
@@ -1556,6 +1579,7 @@
                     <th mat-header-cell *matHeaderCellDef
                         style="font-size: 16px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;">
                         CYL  <br> SPH </th>
+                      
                     <td mat-cell *matCellDef="let element"
                         style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
                         class="hovertblrow-col"> {{element.sph}} </td>
